--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  database: quine_production
+  pool: 25
+  username: postgres
+  password: <%= begin IO.read("/root/.db_pwd") rescue "" end %>
